# kursach-na-22.12-00_56

./: .gitignore  AdminService.cpp  AdminService.h  CMakeLists.txt  abi_verbose.txt  admin.cpp  admin.h  adminwindow.cpp  adminwindow.h  adminwindow_core.cpp  adminwindow_d1.cpp  adminwindow_schedule.cpp  adminwindow_users.cpp  app_console_flags_root.make  app_console_includes_CXX.rsp.txt  app_console_link_root.txt  app_gui_build_make_cur.make  app_gui_flags_root.make  build_err.txt  build_make_root.txt  build_out.txt  build_verbose.txt  build_verbose2.txt  config.h  console_build_log.txt  database.cpp  database.h  gui_after_polish_err.txt  gui_after_polish_out.txt  gui_build_err.txt  gui_build_out.txt  loginwindow.cpp  loginwindow.h  main.cpp  main_console.cpp  make_one_err.txt  make_one_out.txt  make_tw_err.txt  make_tw_out.txt  menu.cpp  (+30 more)
core/: result.h
data/sql/: schedule_420603_newest.sql
docs/: db_schema_summary.md  demo_script.md  project_map.md  report_outline.md  requirements_matrix.md  safe_cleanup_plan.md
services/: d1_randomizer.cpp  d1_randomizer.h  student_service.cpp  student_service.h
tests/: CMakeLists.txt  test_schedule_refactoring.cpp  test_schedule_viewing.cpp
ui/models/: WeekSelection.h
ui/pages/: StudentAbsencesPage.cpp  StudentAbsencesPage.h  StudentGradesPage.cpp  StudentGradesPage.h  StudentSchedulePage.cpp  StudentSchedulePage.h
ui/style/: ThemeManager.cpp  ThemeManager.h  app.qss
ui/util/: AppEvents.cpp  AppEvents.h  TableWidgetStyle.h  UiStyle.h
ui/widgets/: LessonCardWidget.cpp  LessonCardWidget.h  PeriodSelectorWidget.cpp  PeriodSelectorWidget.h  ThemeToggleWidget.cpp  ThemeToggleWidget.h  WeekGridScheduleWidget.cpp  WeekGridScheduleWidget.h
ui/windows/: TeacherScheduleViewer.cpp  TeacherScheduleViewer.h
бд/: schedule_2025_fall_v2.sql  schedule_420601_FINAL.sql  schedule_420601_full (2).sql  schedule_420601_new (1).sql  schedule_420601_new-1.sql  schedule_420601_new.sql  schedule_420602_FINAL.sql  schedule_420602_full (2).sql  schedule_420602_new (1).sql  schedule_420602_new-1.sql  schedule_420602_new.sql  schedule_420603.sql  schedule_420603_FINAL.sql  schedule_420603_full (2).sql  schedule_420603_new (1).sql  schedule_420603_new-1.sql  schedule_420603_new.sql  schedule_420604_FINAL.sql  schedule_420604_full (2).sql  schedule_420604_new (1).sql  schedule_420604_new-1.sql  schedule_420604_new.sql  schedule_migration_2025.sql
